-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 13, 14
-
Component/s: hotspot
-
b32
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8228734 | 14 | Calvin Cheung | P2 | Resolved | Fixed | b08 |
| JDK-8228808 | 13.0.2 | Calvin Cheung | P2 | Resolved | Fixed | b01 |
| JDK-8229082 | 13.0.1 | Calvin Cheung | P2 | Resolved | Fixed | b05 |
| JDK-8243060 | 11.0.8 | Calvin Cheung | P2 | Resolved | Fixed | b01 |
When I build the whole jdk and then just the jvm with fastdebug like:
#!/bin/csh
# build whole JDK first with jib, then do this for incremental.
# might need to adjust linux-x64 directory if using configure -p for
# multiple configurations
if (! $?JAVA_HOME) then
echo "JAVA_HOME must be set"
exit 1
endif
make hotspot LOG=info
if ($status == 0) then
build/linux-x64/jdk/bin/java -cp ~/work Hello
if ($status == 0) then
cp build/linux-x64/jdk/lib/server/libjvm.* $JAVA_HOME/lib/server
endif
endif
and try to run java -version it crashes like:
# JRE version: (14.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-internal+0-2019-07-18-2139061.coleen.null, mixed mode, aot, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x155fdbc] SharedPathsMiscInfo::check(bool)+0x3c
#
The stack trace is:
Current thread (0x00007fd2b0021800): JavaThread "Unknown thread" [_thread_in_vm, id=29735, stack(0x00007fd2b7e7d000,0x00007fd2b7f7e000)]
Stack: [0x00007fd2b7e7d000,0x00007fd2b7f7e000], sp=0x00007fd2b7f7c880, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x155f9dc] SharedPathsMiscInfo::check(bool)+0x3c
V [libjvm.so+0x916db1] ClassLoader::check_shared_paths_misc_info(void*, int, bool)+0x71
V [libjvm.so+0xbc13c3] FileMapInfo::validate_header(bool)+0x113
V [libjvm.so+0x12e5672] MetaspaceShared::initialize_runtime_shared_and_meta_spaces()+0x52
V [libjvm.so+0x12de22d] Metaspace::global_initialize()+0xed
V [libjvm.so+0x17174e4] universe_init()+0xd4
V [libjvm.so+0xdaf483] init_globals()+0x63
V [libjvm.so+0x16d50ca] Threads::create_vm(JavaVMInitArgs*, bool*)+0x28a
V [libjvm.so+0xef8c88] JNI_CreateJavaVM+0x98
C [libjli.so+0x40ef] JavaMain+0x7f
C [libjli.so+0x8159] ThreadJavaMain+0x9
#!/bin/csh
# build whole JDK first with jib, then do this for incremental.
# might need to adjust linux-x64 directory if using configure -p for
# multiple configurations
if (! $?JAVA_HOME) then
echo "JAVA_HOME must be set"
exit 1
endif
make hotspot LOG=info
if ($status == 0) then
build/linux-x64/jdk/bin/java -cp ~/work Hello
if ($status == 0) then
cp build/linux-x64/jdk/lib/server/libjvm.* $JAVA_HOME/lib/server
endif
endif
and try to run java -version it crashes like:
# JRE version: (14.0) (fastdebug build )
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-internal+0-2019-07-18-2139061.coleen.null, mixed mode, aot, tiered, compressed oops, g1 gc, linux-amd64)
# Problematic frame:
# V [libjvm.so+0x155fdbc] SharedPathsMiscInfo::check(bool)+0x3c
#
The stack trace is:
Current thread (0x00007fd2b0021800): JavaThread "Unknown thread" [_thread_in_vm, id=29735, stack(0x00007fd2b7e7d000,0x00007fd2b7f7e000)]
Stack: [0x00007fd2b7e7d000,0x00007fd2b7f7e000], sp=0x00007fd2b7f7c880, free space=1022k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x155f9dc] SharedPathsMiscInfo::check(bool)+0x3c
V [libjvm.so+0x916db1] ClassLoader::check_shared_paths_misc_info(void*, int, bool)+0x71
V [libjvm.so+0xbc13c3] FileMapInfo::validate_header(bool)+0x113
V [libjvm.so+0x12e5672] MetaspaceShared::initialize_runtime_shared_and_meta_spaces()+0x52
V [libjvm.so+0x12de22d] Metaspace::global_initialize()+0xed
V [libjvm.so+0x17174e4] universe_init()+0xd4
V [libjvm.so+0xdaf483] init_globals()+0x63
V [libjvm.so+0x16d50ca] Threads::create_vm(JavaVMInitArgs*, bool*)+0x28a
V [libjvm.so+0xef8c88] JNI_CreateJavaVM+0x98
C [libjli.so+0x40ef] JavaMain+0x7f
C [libjli.so+0x8159] ThreadJavaMain+0x9
- backported by
-
JDK-8228734 JVM crashes with shared archive file mismatch
-
- Resolved
-
-
JDK-8228808 JVM crashes with shared archive file mismatch
-
- Resolved
-
-
JDK-8229082 JVM crashes with shared archive file mismatch
-
- Resolved
-
-
JDK-8243060 JVM crashes with shared archive file mismatch
-
- Resolved
-
- relates to
-
JDK-8226406 JVM fails to detect mismatched or corrupt CDS archive
-
- Resolved
-
-
JDK-8227370 Remove SharedPathsMiscInfo
-
- Resolved
-
(1 relates to)