8228407: JVM crashes with shared archive file mismatch

Stop processing other header fields if initial header check has failed.

Reviewed-by: dholmes, jiangli